Divide logical parts

--- a/views/online/next_fixtures.html
+++ b/views/online/next_fixtures.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 		<!-- Import dependencies from node-->
   <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-  <script src="../../js/onl_next_fixtures.js"></script>
+  <script type="module" src="../../js/onl_next_fixtures.js"></script>
 </head>
 <body style="background: lightgray;">
     <h1 class="text-center">Prochains matchs</h1>
