--- a/views/online/next_fixtures.html
+++ b/views/online/next_fixtures.html
@@ -23,7 +23,9 @@
      <tbody id="fixtures">
      </tbody>
      <p>
-		<button type="button" class="btn btn-danger" onclick="location.href='./menu.html'">Retour</button>
+    <button id="filter" type="button" class="btn btn-info">Show only those that aren't finished</button>
+		<button id="go_back" type="button" class="btn btn-danger" >Retour</button>
+    <input id="searchBar" type="text" placeholder="Search">
 
 </body>
 </html>
