Change day of fixtures to display

--- a/views/online/menu.html
+++ b/views/online/menu.html
@@ -17,8 +17,11 @@
       <!-- Search form -->
 <div class="md-form mt-0">
   <input id="searchLeague" class="form-control" type="text" placeholder="Search per league or country" aria-label="Search">
-  <input id="searchCountry" class="form-control" type="text" placeholder="Search a team" aria-label="Search">
+  <input id="searchTeam" class="form-control" type="text" placeholder="Search a team" aria-label="Search">
 </div>
+    <div>
+      <ul id="results"></ul>
+    </div>
 		<button id="home_page" type="button" class="btn btn-danger">Retour à la page d'accueil</button>
 </body>
 </html>
