End of logic for online part

--- a/views/online/onl_team.html
+++ b/views/online/onl_team.html
@@ -15,6 +15,29 @@
       <tbody id="infos">
       </tbody>
       </table>
+    </div>
+    <div>
+      <h3>Latest fixtures</h3>
+      <table>
+        <th>Date</th>
+        <th>Home team</th>
+        <th>Away team</th>
+        <th>Final score</th>
+        <th>League</th>
+        <tbody id="latestFixtures">
+        </tbody>
+      </table>
+      <div>
+    <div>
+      <h3>Next fixtures</h3>
+      <table>
+        <th>Date</th>
+        <th>Home team</th>
+        <th>Away team</th>
+        <th>League</th>
+        <tbody id="nextFixtures">
+        </tbody>
+      </table>
       <div>
           <button id="go_back" type="button" class="btn btn-danger" >Retour</button>
       </div>
