Pass everything to english

--- a/views/online/menu.html
+++ b/views/online/menu.html
@@ -9,8 +9,8 @@
   <script type="module" src="../../js/onl_menu.js"></script>
 </head>
 <body style="background: lightgray;">
-    <h1 class="text-center">Mon application</h1>
-		<p class="text-center">Choisissez la ligue que vous desirez.</p>
+    <h1 class="text-center">Online menu</h1>
+		<p class="text-center">Pick a league or a team</p>
     <div>
     <buton id="next_fixtures" type="button" class="btn">Today fixtures</button></br>
     </div>
@@ -22,6 +22,6 @@
     <div>
       <ul id="results"></ul>
     </div>
-		<button id="home_page" type="button" class="btn btn-danger">Retour à la page d'accueil</button>
+		<button id="home_page" type="button" class="btn btn-danger">Back to home</button>
 </body>
 </html>
