--- a/views/online/next_fixtures.html
+++ b/views/online/next_fixtures.html
@@ -9,7 +9,7 @@
   <script type="module" src="../../js/onl_next_fixtures.js"></script>
 </head>
 <body style="background: lightgray;">
-    <h1 id="title" class="text-center">Prochains matchs</h1>
+    <h1 id="title" class="text-center">Fixtures</h1>
     <table style="width:100%">
      <tr>
        <th>League</th>
@@ -25,7 +25,7 @@
      <p>
     <button id="next" type="button" class="btn btn-info">Next</button>
     <button id="previous" type="button" class="btn btn-success">Previous</button>
-		<button id="go_back" type="button" class="btn btn-danger" >Retour</button>
+		<button id="go_back" type="button" class="btn btn-danger" >Menu</button>
     <input id="searchBar" type="text" placeholder="Search">
 
 </body>
