--- a/views/online/onl_league.html
+++ b/views/online/onl_league.html
@@ -26,7 +26,7 @@
         </ul>
       </div>
       <div>
-        <button id="go_back" type="button" class="btn btn-danger" >Retour</button>
+        <button id="go_back" type="button" class="btn btn-danger" >Menu</button>
       </div>
 </body>
 </html>
