--- a/views/online/onl_team.html
+++ b/views/online/onl_team.html
@@ -9,7 +9,7 @@
   <script type="module" src="../../js/onl_team.js"></script>
 </head>
 <body style="background: lightgray;">
-    <h1 id="title" class="text-center">League</h1>
+    <h1 id="title" class="text-center">Team</h1>
     <div>
       <table>
       <tbody id="infos">
@@ -39,7 +39,7 @@
         </tbody>
       </table>
       <div>
-          <button id="go_back" type="button" class="btn btn-danger" >Retour</button>
+          <button id="go_back" type="button" class="btn btn-danger" >Menu</button>
       </div>
 </body>
 </html>
