Change projo structure

--- a/views/menu.html
+++ b/views/menu.html
@@ -6,14 +6,14 @@
   <title>UnFootball</title>
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <!-- Import dependencies from node-->
-  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <script type="module" src="../../js/onl_menu.js"></script>
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <script type="module" src="../js/menu.js"></script>
 </head>
 
 <body style="background: #000000;">
   <nav class="navbar navbar-dark" style="background-color: #1a1a1a">
     <a class="navbar-brand">
-      <img src="../../icons/icon.png" width="30" height="30" class="d-inline-block align-top" alt=""> UnFootball
+      <img src="../icons/icon.png" width="30" height="30" class="d-inline-block align-top" alt=""> UnFootball
         <buton id="next_fixtures" type="button" style="color: #ffffff" class="btn">Today fixtures</button></br>
     </a>
     <form class="form-inline my-2 my-lg-0">
