--- a/views/team.html
+++ b/views/team.html
@@ -6,8 +6,8 @@
   <title>UnFootball</title>
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <!-- Import dependencies from node-->
-  <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-  <script type="module" src="../../js/onl_team.js"></script>
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <script type="module" src="../js/team.js"></script>
 </head>
 
 <body style="background: #000000;">
