--- a/views/menu.html
+++ b/views/menu.html
@@ -7,6 +7,7 @@
   <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   <!-- Import dependencies from node-->
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../icons/fa/css/font-awesome.min.css">
   <script type="module" src="../js/menu.js"></script>
 </head>
 
@@ -17,7 +18,8 @@
         <buton id="next_fixtures" type="button" style="color: #ffffff" class="btn">Today fixtures</button></br>
     </a>
     <form class="form-inline my-2 my-lg-0">
-      <input id="write_key" class="form-control mr-sm-2" type="password" placeholder="Change the api key" style="background: #000000; border-color: #2b2b2b" aria-label="Search">
+      <i id="lock" class="fa fa-lock" aria-hidden="true" style="color:lightsteelblue"></i>
+      <input id="write_key" disabled="disabled" class="form-control mr-sm-2" type="password" placeholder="Change the api key" style="background: #000000; border-color: #2b2b2b" aria-label="Search">
       <small><a id="get_an_api_key" href="#">Get an api key</a></small>
     </form>
     <div class="dropdown">
@@ -28,7 +30,7 @@
   </nav>
   <br />
   <div class="container">
-    <h1 id="title" class="text-center" style="color: #ffffff">Latest news</h1>
+    <h1 id="title" class="text-center" style="color: #ffffff">Latest news </h1>
     <div class="card" style="background-color: #2b2b2b">
       <ul id="latest_news" class="list-group list-group-flush" style="background-color: #ffffff">
       </ul>
