Add match details

--- a/views/fixtures.html
+++ b/views/fixtures.html
@@ -29,11 +29,12 @@
           <th style="border-color: #f3f4f5; border-width: 1px">Start time</th>
           <th style="border-color: #f3f4f5; border-width: 1px">Time elapsed</th>
           <th style="border-color: #f3f4f5; border-width: 1px">Status</th>
+          <th style="border-color: #f3f4f5; border-width: 1px">Line ups and match events</th>
         </tr>
       </thead>
       <tbody id="fixtures" style="background: #1a1a1a; color:#f3f4f5;" id="latestFixtures">
       </tbody>
-    </br>
+      </br>
       <div class="row">
         <div class="col-sm">
           <input type="date" id="datepicker" name="trip-start" min="2000-01-01" max="2021-10-10" style="background: #2b2b2b;">
@@ -41,12 +42,12 @@
           <button id="next" type="button" class="btn btn-info">Next</button>
         </div>
         <div class="col-sm">
-              <form class="form-inline my-2 my-lg-0">
-          <input id="searchBar" type="text" class="form-control mr-sm-2" placeholder="Search for one element in particular" style="background: #000000; border-color: #2b2b2b" >
-        </form>
+          <form class="form-inline my-2 my-lg-0">
+            <input id="searchBar" type="text" class="form-control mr-sm-2" placeholder="Search for one element in particular" style="background: #000000; border-color: #2b2b2b">
+          </form>
         </div>
       </div>
-    </br>
+      </br>
   </div>
 
 </body>
