--- a/views/menu.html
+++ b/views/menu.html
@@ -22,10 +22,8 @@
       <input id="write_key" disabled="disabled" class="form-control mr-sm-2" type="password" placeholder="Change the api key" style="background: #000000; border-color: #2b2b2b" aria-label="Search">
       <small><a id="get_an_api_key" href="#">Get an api key</a></small>
     </form>
-    <div class="dropdown">
-      <div id="myDropdown" class="dropdown-content">
+    <div>
         <input id="searchbar" class="form-control mr-sm-2" type="search" placeholder="Search" style="background: #000000; border-color: #2b2b2b" aria-label="Search">
-      </div>
     </div>
   </nav>
   <br />
