--- a/views/league.html
+++ b/views/league.html
@@ -26,6 +26,8 @@
     <br />
     <h3 id="subtitle" class="text-center" style="color:white">Subtitle</h3>
     <br />
+    <h5 id="profiling" class="text-center" style="color:white">Profiling</h3>
+    <br />
     <br />
     <h3 style="color:white">Ranking</h3>
     <div id="rankings">
