--- a/views/team.html
+++ b/views/team.html
@@ -24,6 +24,10 @@
     <div class="row justify-content-md-center">
       <h2 id="clubName" style="color:#f3f4f5;" class="d-flex justify-content-center"><b>Team name.</b></h2>
     </div>
+    <br />
+    <div class="row justify-content-md-center">
+      <h3 id="profiling" style="color:#f3f4f5;" class="d-flex justify-content-center"><b>Profiling.</b></h2>
+    </div>
     <br/>
     <p class="card-text" style="color:#f3f4f5;" id="desc">Team description.</p>
     <div>
