--- a/views/fixtures.html
+++ b/views/fixtures.html
@@ -40,6 +40,7 @@
           <input type="date" id="datepicker" name="trip-start" min="2000-01-01" max="2021-10-10" style="background: #2b2b2b;">
           <button id="previous" type="button" class="btn btn-success">Previous</button>
           <button id="next" type="button" class="btn btn-info">Next</button>
+          <button id="favs" type="button" class="btn btn-secondary">Only my favorites</button>
         </div>
         <div class="col-sm">
           <form class="form-inline my-2 my-lg-0">
